fix dxf_003 on mobile

--- a/st_builder_frontend_next/src/components/user-blocks/CAD/DXF/dxf-003/dxf-003_public.module.scss
+++ b/st_builder_frontend_next/src/components/user-blocks/CAD/DXF/dxf-003/dxf-003_public.module.scss
@@ -63,8 +63,7 @@
   overflow: hidden;
 
   @media (max-width: 480px) {
-    flex: 0 0 auto;
+    flex: 2;
     width: 100%;
-    max-height: 50vh;
   }
 }
